フロントエンド（HTML）側の呼び出し先も変更

--- a/static/admin.html
+++ b/static/admin.html
@@ -688,7 +688,7 @@ body.dark-mode .total-chunks-info {
     async function initializeSupabase() {
         try {
             // クライアント用と同じ設定エンドポイントを利用します
-            const response = await fetch('/api/client/chat/config');
+            const response = await fetch('/api/client/config');
             if (!response.ok) return;
             const config = await response.json();
             if (config.supabase_url && config.supabase_anon_key) {
